package afb.astyann.projectservice.domain;

public enum GenerationType {
    REQUIREMENTS,
    DOCUMENTS,
    UML,
    CODE,
    DEPLOYMENT,
    FULL
}
