' ============================================================
' 2. PROJECT SERVICE — Design Class Diagram
' ============================================================
@startuml ProjectService_DesignClass
left to right direction
skinparam classAttributeIconSize 0

package "controller" {
  class ProjectController {
    -projectService : IProjectService
    +createProject(dto : CreateProjectDTO) : ResponseEntity<ProjectDTO>
    +updateProject(projectId : UUID, dto : UpdateProjectDTO) : ResponseEntity<ProjectDTO>
    +deleteProject(projectId : UUID) : ResponseEntity<Void>
    +searchProjects(query : String) : ResponseEntity<List<ProjectDTO>>
    +getProjectById(projectId : UUID) : ResponseEntity<ProjectDTO>
    +triggerGeneration(projectId : UUID, dto : GenerationRequestDTO) : ResponseEntity<Void>
  }
}

package "service" {
  interface IProjectService {
    +createProject(userId : UUID, dto : CreateProjectDTO) : ProjectDTO
    +updateProject(projectId : UUID, dto : UpdateProjectDTO) : ProjectDTO
    +deleteProject(projectId : UUID) : void
    +searchProjects(userId : UUID, query : String) : List<ProjectDTO>
    +getProjectById(projectId : UUID) : ProjectDTO
    +triggerGeneration(projectId : UUID, type : GenerationType) : void
  }

  class ProjectServiceImpl {
    -projectRepository : ProjectRepository
    -guidedQuestionRepository : GuidedQuestionRepository
    -requirementsClient : RequirementsServiceClient
    -documentClient : DocumentServiceClient
    -umlClient : UMLServiceClient
    -codeGenClient : CodeGenServiceClient
    -deploymentClient : DeploymentServiceClient
    +createProject(userId : UUID, dto : CreateProjectDTO) : ProjectDTO
    +updateProject(projectId : UUID, dto : UpdateProjectDTO) : ProjectDTO
    +deleteProject(projectId : UUID) : void
    +searchProjects(userId : UUID, query : String) : List<ProjectDTO>
    +getProjectById(projectId : UUID) : ProjectDTO
    +triggerGeneration(projectId : UUID, type : GenerationType) : void
  }
}

package "domain" {
  class Project {
    -projectId : UUID
    -userId : UUID
    -title : String
    -description : String
    -creationDate : LocalDateTime
    -status : ProjectStatus
    -updatedDate : LocalDateTime
    -docPath : String
    -docUrl : String
  }

  class GuidedQuestion {
    -GQ_Id : UUID
    -projectId : UUID
    -question : String
    -answer : String
    -createdAt : LocalDateTime
  }

  enum ProjectStatus {
    ANALYZING
    GENERATING
    COMPLETED
  }

  enum GenerationType {
    REQUIREMENTS
    DOCUMENTS
    UML
    CODE
    DEPLOYMENT
    FULL
  }
}

package "repository" {
  interface ProjectRepository {
    +findByProjectId(projectId : UUID) : Optional<Project>
    +findByUserId(userId : UUID) : List<Project>
    +findByUserIdAndTitleContaining(userId : UUID, query : String) : List<Project>
    +save(project : Project) : Project
    +deleteByProjectId(projectId : UUID) : void
  }

  interface GuidedQuestionRepository {
    +findByProjectId(projectId : UUID) : List<GuidedQuestion>
    +save(gq : GuidedQuestion) : GuidedQuestion
    +deleteByProjectId(projectId : UUID) : void
  }
}

package "dto" {
  class CreateProjectDTO {
    +title : String
    +description : String
  }

  class UpdateProjectDTO {
    +title : String
    +description : String
    +status : ProjectStatus
  }

  class ProjectDTO {
    +projectId : UUID
    +title : String
    +description : String
    +status : ProjectStatus
    +creationDate : LocalDateTime
    +updatedDate : LocalDateTime
  }

  class GenerationRequestDTO {
    +type : GenerationType
  }
}

package "client" {
  class RequirementsServiceClient {
    +triggerRequirementsGeneration(projectId : UUID) : void
  }

  class DocumentServiceClient {
    +triggerDocumentGeneration(projectId : UUID) : void
  }

  class UMLServiceClient {
    +triggerUMLGeneration(projectId : UUID) : void
  }

  class CodeGenServiceClient {
    +triggerCodeGeneration(projectId : UUID) : void
  }

  class DeploymentServiceClient {
    +triggerDeploymentGeneration(projectId : UUID) : void
  }
}

ProjectController       ..>  IProjectService
ProjectServiceImpl       ..|> IProjectService
ProjectServiceImpl       ..>  ProjectRepository
ProjectServiceImpl       ..>  GuidedQuestionRepository
ProjectServiceImpl       ..>  RequirementsServiceClient
ProjectServiceImpl       ..>  DocumentServiceClient
ProjectServiceImpl       ..>  UMLServiceClient
ProjectServiceImpl       ..>  CodeGenServiceClient
ProjectServiceImpl       ..>  DeploymentServiceClient
ProjectRepository        ..>  Project
GuidedQuestionRepository ..>  GuidedQuestion
Project                  ..>  ProjectStatus
GuidedQuestion           "0..*" --> "1" Project

@enduml